# adota

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  multiple_metrics_calc_all_energy_stratified_sobel_full_sphere_r15_pflugfelder.out  pbcopy  pyproject.toml
data/: README.md
docs/: beamlet_extraction_integration_plan.md  refactor_models_layers.md  scripts_refactor_phase1_plan.md  scripts_refactor_plan.md
models/: README.md
research/: ideas.md
scripts/: README.md  add_excluded_index.py  analysis_texture_with_inference.py  beamlet_bev_rotation_timing.py  beamlet_timing_comparison.py  bragg_peak_estimation.py  compare_plan_dose.py  config_ablation_no_conv_residual.yaml  config_ablation_no_transformer_residual.yaml  config_analysis_advanced_metrics.yaml  config_analysis_texture_with_inference.yaml  config_beamlet_bev_rotation_timing.yaml  config_bp_estimation.yaml  config_multi_radius_analysis.yaml  config_range_analysis.yaml  config_run_model.yaml  config_run_model_h5py.yaml  config_run_plan_opentps.yaml  config_texture_analysis.yaml  config_threshold_sweep.yaml  config_train_adota.yaml  config_training_set_analysis.yaml  config_validation_adota.yaml  config_vlm_quantification.yaml  ct_texture_analysis.py  inference_worker.py  multi_radius_analysis.py  plot_beamlets.py  range_analysis.py  remove_h5_record.py  rotatation_performance_analysis.py  run_ab.sh  run_ablation.sh  run_all_plans.sh  run_grid_factor_ab.sh  run_model.py  run_model_h5py.py  run_model_hptc.py  run_plan_opentps.py  threshold_sweep.py  (+6 more)
tests/: conftest.py  test_beamlet_input_figure.py  (+20 more)
(+124 files in other folders)
