[project]
name = "adota"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pydicom>=2.4.4",
    "pymedphys>=0.40.0",
    "pyyaml>=6.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "simpleitk>=2.4.0",
    "torch>=2.8.0",
    "tqdm>=4.66.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "typer>=0.21.1",
    "prettytable>=3.16.0",
]

# Development-only tooling (test framework, linter). Not installed for plain
# runtime use; installed by `uv sync` / available under `uv run` by default.
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
